# patrick-ai-factory-data-gate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/sql/: ci-schema.sql
.github/workflows/: ci.yml  deploy.yml
contracts/: example-users.yaml  hermes-review.yaml  hermes.yaml
datagate/: __init__.py  cli.py  contract.py  db.py  differ.py  docsgen.py  engine.py  exceptions.py  generator.py  introspect.py  models.py  report.py  reporting.py  verifier.py
datagate/checks/: __init__.py  audit.py  base.py  columns.py  constraints.py  drift.py  indexes.py  structure.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: deploy.sh
tests/: helpers.py  test_checks.py  test_cli.py  test_contract.py  test_db.py  test_differ.py  test_docsgen.py  test_engine.py  test_generator.py  test_introspect.py  test_models.py  test_report.py  test_reporting.py  test_verifier.py
