[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patrick-ai-factory-data-gate"
version = "0.1.0"
description = "Read-only PostgreSQL schema verifier"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "psycopg[binary]>=3.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
]

[project.scripts]
datagate = "datagate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["datagate*"]
exclude = ["artifacts*", "contracts*", "tests*"]

[tool.black]
line-length = 90
target-version = ["py312"]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["datagate"]
